GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha22 :
    
        - edpykota now refuse to work if the user is not a PyKota admin.
        
        - Fixes a recently introduced bug with users groups and PostgreSQL.
        
    - 1.20alpha21 :
    
        - Now dumpykota refuses to launch if the current user is not
          a PyKota administrator (a PyKota administrator is an user
          allowed to read the pykotadmin.conf file).
          
        - Now any PyKota administrator can use repykota and warnpykota
          with additionnal arguments, not only the root user.
          
        - Improved documentation a bit.
        
    - 1.20alpha20 :
    
        - Reduced delay in internal SNMP and PJL_over_TCP handlers
          from 2 to 1 second.
        
        - dumpykota can now output XML.
        
    - 1.20alpha19 :
    
        - Improved user groups and user groups quotas dumps in dumpykota.
        
        - Finished implementation of LDAP support in dumpykota.
        
        - The md5 sum of the job's datas is now available as an 
          hexadecimal digest in the PYKOTAMD5SUM environment variable.
          
        - The description, filename, title, and options fields
          are now stored as UTF-8 strings in both LDAP and PostgreSQL.
          Proper charset is used during extraction from the database.
          
    - 1.20alpha18 :
    
        - Experimental autopykota command to initialize user
          account and quota entries on first print while not 
          resetting the balance value if not needed.
          
        - Added the new "winbind_separator" directive to strip
          out the Samba/Winbind domain name while printing if